server: add frames POST and return version number
